--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,12 +34,12 @@ jobs:
       # https://github.com/pre-commit/action
       - uses: pre-commit/action@v3.0.1
 
-      # - name: Cache playwright binaries
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: |
-      #       ~/.cache/ms-playwright
-      #     key: ${{ runner.os }}-playwright
+      - name: Cache playwright binaries
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -56,43 +56,43 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # - name: Install playwright
-      #   run: |
-      #     python -mpip install -r dev-requirements.txt
-      #     python -mplaywright install --with-deps
+      - name: Install playwright
+        run: |
+          python -mpip install -r dev-requirements.txt
+          python -mplaywright install --with-deps
 
-      # - name: Playwright browser test
-      #   run: |
-      #     container_id=$(docker run -d -it -p 8888:8888 -e JUPYTER_TOKEN=secret test)
-      #     sleep 3
-      #     export CONTAINER_ID=$container_id
-      #     export JUPYTER_HOST=http://localhost:8888
-      #     export JUPYTER_TOKEN=secret
+      - name: Playwright browser test
+        run: |
+          container_id=$(docker run -d -it -p 8888:8888 -e JUPYTER_TOKEN=secret test)
+          sleep 3
+          export CONTAINER_ID=$container_id
+          export JUPYTER_HOST=http://localhost:8888
+          export JUPYTER_TOKEN=secret
 
-      #     python -mpytest -vs
+          python -mpytest -vs
 
-      #     echo "::group::jupyter_server logs"
-      #     docker logs $container_id
-      #     echo "::endgroup::"
+          echo "::group::jupyter_server logs"
+          docker logs $container_id
+          echo "::endgroup::"
 
-      #     echo "::group::vncserver logs"
-      #     docker exec $container_id bash -c 'cat ~/.vnc/*.log'
-      #     echo "::endgroup::"
+          echo "::group::vncserver logs"
+          docker exec $container_id bash -c 'cat ~/.vnc/*.log'
+          echo "::endgroup::"
 
-      #     timeout 5 docker stop $container_id > /dev/null && echo "Passed SIGTERM test" || { echo "Failed SIGTERM test" && TEST_OK=false; }
+          timeout 5 docker stop $container_id > /dev/null && echo "Passed SIGTERM test" || { echo "Failed SIGTERM test" && TEST_OK=false; }
 
-      #     if [ "$TEST_OK" == "false" ]; then
-      #         echo "One or more tests failed!"
-      #         exit 1
-      #     fi
+          if [ "$TEST_OK" == "false" ]; then
+              echo "One or more tests failed!"
+              exit 1
+          fi
 
-      # - name: Upload screenshot
-      #   uses: actions/upload-artifact@v4
-      #   if: always()
-      #   with:
-      #     name: screenshots
-      #     path: screenshots/*
-      #     if-no-files-found: error
+      - name: Upload screenshot
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: screenshots
+          path: screenshots/*
+          if-no-files-found: error
 
   publish:
     runs-on: ubuntu-24.04
